feat : channel crud